--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www/thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-  <meta charset="UTF-8">
-  <title>Menu</title>
+    <meta charset="UTF-8">
+    <title>Menu</title>
 </head>
 <body>
 <!--================ Start Header Menu Area =================-->
 <header th:fragment="menu" class="header_area">
-  <div class="main_menu">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <a class="navbar-brand logo_h" href="index.html"><img src="/img/Poze proiect/logoMenu3.jpg" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-          <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-            <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
-            <li sec:authorize="hasRole('ROLE_SELLER')" class="nav-item"><a class="nav-link" href="/addProduct">Add Product</a></li>
-            <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" href="/registration">Registration</a></li>
-            <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" href="/logIn">Log In</a></li>
-            <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
-          </ul>
+    <div class="main_menu">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
+                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
+                        <li sec:authorize="hasRole('ROLE_SELLER')" class="nav-item"><a class="nav-link" href="/addProduct">Add Product</a></li>
+                        <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" href="/registration">Register</a></li>
+                        <li sec:authorize="isAnonymous()" class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                        <li sec:authorize="isAuthenticated()" class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                    </ul>
 
-          <ul class="nav-shop">
-            <li sec:authorize="isAuthenticated()" class="nav-item">Hello <span sec:authentication="name"></span>!</li>
-            <li class="nav-item"><button><i class="ti-search"></i></button></li>
-            <li class="nav-item"><button><i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span></button> </li>
-            <li sec:authorize="hasRole('ROLE_BUYER')" class="nav-item"><a class="button button-header" href="/checkout">Checkout</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
+                    <ul class="nav-shop">
+                        <li sec:authorize="isAuthenticated()" class="nav-item">Hello <span sec:authentication="name"></span>!</button></li>
+                        <li class="nav-item"><button><i class="ti-search"></i></button></li>
+                        <li class="nav-item"><button><i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span></button> </li>
+                        <li sec:authorize="hasRole('ROLE_BUYER')" class="nav-item"><a class="button button-header" href="/checkout">Checkout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 </header>
 <!--================ End Header Menu Area =================-->
 </body>
