--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,75 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www/thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="icon" href="/img/Fevicon.png" type="image/png">
+    <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendors/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="/vendors/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/vendors/linericon/style.css">
+    <link rel="stylesheet" href="/vendors/owl-carousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="/vendors/nice-select/nice-select.css">
+    <link rel="stylesheet" href="/vendors/nouislider/nouislider.min.css">
 
-    <link rel="icon" href="img/Fevicon.png" type="image/png">
-    <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="vendors/linericon/style.css">
-    <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="vendors/nice-select/nice-select.css">
-    <link rel="stylesheet" href="vendors/nouislider/nouislider.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/custom.css">
-
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
-<div th:insert="fragments/menu :: menu" ></div>
-
-
-<!--&lt;!&ndash;================ Start Header Menu Area =================&ndash;&gt;-->
-<!--<header class="header_area">-->
-<!--    <div class="main_menu">-->
-<!--        <nav class="navbar navbar-expand-lg navbar-light">-->
-<!--            <div class="container">-->
-<!--&lt;!&ndash;                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>&ndash;&gt;-->
-<!--                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
-<!--                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                    <span class="icon-bar"></span>-->
-<!--                    <span class="icon-bar"></span>-->
-<!--                    <span class="icon-bar"></span>-->
-<!--                </button>-->
-<!--                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">-->
-<!--                    <ul class="nav navbar-nav menu_nav ml-auto mr-auto">-->
-<!--                        <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>-->
-<!--                        <li class="nav-item submenu dropdown">-->
-<!--                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"-->
-<!--                               aria-expanded="false">Shop</a>-->
-<!--&lt;!&ndash;                            <ul class="dropdown-menu">&ndash;&gt;-->
-<!--&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;&lt;!&ndash;                                <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
-<!--                        </li>-->
-<!--                        <li class="nav-item"><a class="nav-link" href="/addUser">Add User</a></li>-->
-<!--                    </ul>-->
-
-<!--                </div>-->
-<!--            </div>-->
-<!--        </nav>-->
-<!--    </div>-->
-<!--</header>-->
-<!--&lt;!&ndash;================ End Header Menu Area =================&ndash;&gt;-->
-
-
+<div th:insert="~{fragments/menu :: menu}"></div>
 <!-- ================ trending product section start ================= -->
-<section class="section-margin calc-60px">
+<section class="section-margin calc-60px customize-available-products">
     <div class="container">
         <div class="section-intro pb-60px">
             <p>Available products</p>
-            <br>
         </div>
         <div class="row">
             <div th:each="productDto:${productDtos}" class="col-md-6 col-lg-4 col-xl-3">
                 <div class="card text-center card-product">
                     <div class="card-product__img">
-                        <img class="card-img" th:src="${'data:image/png; base64, ' + productDto.image}" alt="">
+                        <img class="card-img" style="width: 200px"
+                             th:src="${'data:image/png; base64, '+productDto.image}" alt="">
                         <ul class="card-product__imgOverlay">
                             <li>
                                 <button><i class="ti-search"></i></button>
@@ -83,17 +43,28 @@
                         </ul>
                     </div>
                     <div class="card-body">
-                        <p th:text = "${productDto.category}"></p>
-                        <h4 class="card-product__title"><a th:text="${productDto.name}" th:href="@{/product/{y}/{x}(x=${productDto.id},y=${productDto.name})}"></a></h4>
-                        <p th:text="${'$' + productDto.price}" class="card-product__price"></p>
+                        <p th:text="${productDto.category}" ></p>
+                        <h4 class="card-product__title">
+                            <a
+                                    th:text="${productDto.name}"
+                                    th:href="@{/product/{y}/{x}(x=${productDto.id},y=${productDto.name})}">
+                            </a></h4>
+                        <p th:text="${'$'+productDto.price}" class="card-product__price"></p>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
 <!-- ================ trending product section end ================= -->
 
+<script src="/vendors/jquery/jquery-3.2.1.min.js"></script>
+<script src="/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="/vendors/skrollr.min.js"></script>
+<script src="/vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="/vendors/nice-select/jquery.nice-select.min.js"></script>
+<script src="/vendors/jquery.ajaxchimp.min.js"></script>
+<script src="/vendors/mail-script.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
