--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-
-
-<html lang="en" xmlns:th="http://www/thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
-
     <link rel="icon" href="/img/Fevicon.png" type="image/png">
     <link rel="stylesheet" href="/vendors/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/vendors/fontawesome/css/all.min.css">
@@ -14,17 +11,14 @@
     <link rel="stylesheet" href="/vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="/vendors/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/vendors/nice-select/nice-select.css">
-
     <link rel="stylesheet" href="/vendors/nouislider/nouislider.min.css">
 
-
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/custom.css">
 
+    <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
-<div th:insert="fragments/menu :: menu" ></div>
-
+<div th:insert="fragments/menu :: menu"></div>
 <!--================Login Box Area =================-->
 <section class="login_box_area section-margin">
     <div class="container">
@@ -33,8 +27,7 @@
                 <div class="login_box_img">
                     <div class="hover">
                         <h4>Already have an account?</h4>
-                        <p>There are advances being made in science and technology everyday, and a good example of this
-                            is the</p>
+                        <p>There are advances being made in science and technology everyday, and a good example of this is the</p>
                         <a class="button button-account" href="/login">Login Now</a>
                     </div>
                 </div>
@@ -42,43 +35,30 @@
             <div class="col-lg-6">
                 <div class="login_form_inner register_form_inner">
                     <h3>Create an account</h3>
-                    <form th:object="${registrationDto}"  class="row login_form" action="/registration" method="post" id="register_form">
+                    <form th:object="${registrationDto}" class="row login_form" action="/registration" method="post" id="register_form" >
                         <div class="col-md-12 form-group">
-                            <input th:field="*{fullName}" type="text" class="form-control" id="fullName" name="fullName" placeholder="Full name"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
+                            <input th:field="*{fullName}" type="text" class="form-control" id="fullName" name="fullName" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Full Name'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{emailAddress}" type="text" class="form-control" id="email" name="email" placeholder="Email Address"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'">
+                            <input th:field="*{emailAddress}" type="text" class="form-control" id="email" name="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'">
                             <p th:each="error : ${#fields.errors('emailAddress')}" th:text="${error}"></p>
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{password}" type="password" class="form-control" id="password" name="password" placeholder="Password"
-                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-
+                            <input th:field="*{address}" type="text" class="form-control" id="address" name="address" placeholder="Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Address'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword" name="confirmPassword"
-                                   placeholder="Confirm Password" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Confirm Password'">
-                            <p th:each="error : ${#fields.errors('confirmPassword')}" th:text="${error}"></p>
-
+                            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{address}" type="text" class="form-control" id="address" name="address"
-                                   placeholder="Address" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Address'">
+                            <input th:field="*{password}" type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
                         </div>
                         <div class="col-md-12 form-group">
-                            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" name="phoneNumber"
-                                   placeholder="Phone number" onfocus="this.placeholder = ''"
-                                   onblur="this.placeholder = 'Phone number'">
+                            <input th:field="*{confirmPassword}" type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">
                         </div>
                         <div class="col-md-12 form-group">
                             <select th:field="*{userRole}"  class="form-control" id="userRole" name="userRole">
-                                <option th:value="ROLE_BUYER" th:text = "Buyer"></option>
-                                <option th:value="ROLE_SELLER" th:text = "Seller"></option>
-
+                                <option th:value="ROLE_BUYER" th:text="Buyer"></option>
+                                <option th:value="ROLE_SELLER" th:text="Seller"></option>
                             </select>
                         </div>
                         <div class="col-md-12 form-group">
@@ -91,8 +71,6 @@
     </div>
 </section>
 <!--================End Login Box Area =================-->
-
-
 <script src="/vendors/jquery/jquery-3.2.1.min.js"></script>
 <script src="/vendors/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="/vendors/skrollr.min.js"></script>
@@ -101,7 +79,5 @@
 <script src="/vendors/jquery.ajaxchimp.min.js"></script>
 <script src="/vendors/mail-script.js"></script>
 <script src="/js/main.js"></script>
-
-
 </body>
 </html>
