error and checkout pages modified.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,18 +17,18 @@
     <link rel="stylesheet" href="/css/custom.css">
 
 </head>
-<body>
+<body class = "back">
 
-<section class="section-margin calc-60px">
+<section class="section-margin calc-50px">
     <div class = "container">
         <div class="row">
             <div class="col-lg-12">
 
-            <p>Error</p>
+<!--            <p>Error</p>-->
+                <button class="button button-register w-100"><a href="/home">Return to the site</a></button>
 
-            <img src="src/main/resources/static/img/error_handling.jpg" alt="Error image">
+                <img class ="w-100" src="img/error_handling.jpg" alt="Error image">
 
-            <button class="button button-register w-100"><a href="/home">Return to the site</a></button>
             </div>
         </div>
     </div>
