--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,4 +1,10 @@
 button.button-register.w-100 {
-    background: red;
+    background: green;
 }
 
+.back {
+    background-color: #0B902AFF;
+}
+.section-margin.calc-50px {
+    margin: 50px 0 70px 0
+}
