--- a/src/main/resources/templates/confirmation.html
+++ b/src/main/resources/templates/confirmation.html
@@ -25,160 +25,152 @@
 
 <section class="order_details section-margin--small">
   <div class="container">
-    <p class="text-center billing-alert">Thank you. Your order has been received.</p>
+    <p class="text-center billing-alert">Va multumim! Comanda a fost plasata.</p>
     <div class="row mb-5">
       <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
         <div class="confirmation-card">
-          <h3 class="billing-title">Order Info</h3>
+          <h3 class="billing-title">Informatii comanda</h3>
           <table class="order-rable">
             <tr>
-              <td>Order number</td>
-              <td>: 60235</td>
-            </tr>
-            <tr>
               <td>Date</td>
-              <td>: Oct 03, 2017</td>
+              <td th:text="${': ' + dtf.format(now)}" >:</td>
             </tr>
             <tr>
               <td>Total</td>
-              <td>: USD 2210</td>
+              <td th:text="${': ' + shoppingCartDto.getTotal() + '$'}">: </td>
             </tr>
             <tr>
-              <td>Payment method</td>
-              <td>: Check payments</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-      <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
-        <div class="confirmation-card">
-          <h3 class="billing-title">Billing Address</h3>
-          <table class="order-rable">
-            <tr>
-              <td>Street</td>
-              <td>: 56/8 panthapath</td>
-            </tr>
-            <tr>
-              <td>City</td>
-              <td>: Dhaka</td>
-            </tr>
-            <tr>
-              <td>Country</td>
-              <td>: Bangladesh</td>
-            </tr>
-            <tr>
-              <td>Postcode</td>
-              <td>: 1205</td>
+              <td>Metoda plata</td>
+              <td>: Courier</td>
             </tr>
           </table>
         </div>
       </div>
+<!--      <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">-->
+<!--        <div class="confirmation-card">-->
+<!--          <h3 class="billing-title">Billing Address</h3>-->
+<!--          <table class="order-rable">-->
+<!--            <tr>-->
+<!--              <td>Street</td>-->
+<!--              <td>: 56/8 panthapath</td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>City</td>-->
+<!--              <td>: Dhaka</td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>Country</td>-->
+<!--              <td>: Bangladesh</td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>Postcode</td>-->
+<!--              <td>: 1205</td>-->
+<!--            </tr>-->
+<!--          </table>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="col-md-6 col-xl-4 mb-4 mb-xl-0">
         <div class="confirmation-card">
-          <h3 class="billing-title">Shipping Address</h3>
+            <h3 class="billing-title">Detalii</h3>
           <table class="order-rable">
             <tr>
-              <td>Street</td>
-              <td>: 56/8 panthapath</td>
+              <td>Address</td>
+              <td th:text="${': ' + user.getAddress()}"></td>
             </tr>
             <tr>
-              <td>City</td>
-              <td>: Dhaka</td>
+              <td>Name</td>
+              <td th:text="${': ' + user.getFullName()}"></td>
             </tr>
             <tr>
-              <td>Country</td>
-              <td>: Bangladesh</td>
-            </tr>
-            <tr>
-              <td>Postcode</td>
-              <td>: 1205</td>
+              <td>Phone</td>
+              <td th:text="${': ' + user.getPhoneNumber()}"></td>
             </tr>
           </table>
         </div>
       </div>
     </div>
-    <div class="order_details_table">
-      <h2>Order Details</h2>
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-          <tr>
-            <th scope="col">Product</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Total</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr>
-            <td>
-              <p>Pixelstore fresh Blackberry</p>
-            </td>
-            <td>
-              <h5>x 02</h5>
-            </td>
-            <td>
-              <p>$720.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Pixelstore fresh Blackberry</p>
-            </td>
-            <td>
-              <h5>x 02</h5>
-            </td>
-            <td>
-              <p>$720.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Pixelstore fresh Blackberry</p>
-            </td>
-            <td>
-              <h5>x 02</h5>
-            </td>
-            <td>
-              <p>$720.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h4>Subtotal</h4>
-            </td>
-            <td>
-              <h5></h5>
-            </td>
-            <td>
-              <p>$2160.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h4>Shipping</h4>
-            </td>
-            <td>
-              <h5></h5>
-            </td>
-            <td>
-              <p>Flat rate: $50.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h4>Total</h4>
-            </td>
-            <td>
-              <h5></h5>
-            </td>
-            <td>
-              <h4>$2210.00</h4>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+<!--    <div class="order_details_table">-->
+<!--      <h2>Order Details</h2>-->
+<!--      <div class="table-responsive">-->
+<!--        <table class="table">-->
+<!--          <thead>-->
+<!--          <tr>-->
+<!--            <th scope="col">Product</th>-->
+<!--            <th scope="col">Quantity</th>-->
+<!--            <th scope="col">Total</th>-->
+<!--          </tr>-->
+<!--          </thead>-->
+<!--          <tbody>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <p>Pixelstore fresh Blackberry</p>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5>x 02</h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p>$720.00</p>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <p>Pixelstore fresh Blackberry</p>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5>x 02</h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p>$720.00</p>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <p>Pixelstore fresh Blackberry</p>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5>x 02</h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p>$720.00</p>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <h4>Subtotal</h4>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5></h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p>$2160.00</p>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <h4>Shipping</h4>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5></h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p>Flat rate: $50.00</p>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr>-->
+<!--            <td>-->
+<!--              <h4>Total</h4>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h5></h5>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <h4>$2210.00</h4>-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          </tbody>-->
+<!--        </table>-->
+<!--      </div>-->
+<!--    </div>-->
   </div>
 </section>
 <!--================End Order Details Area =================-->
